# Musico

./: .gitignore  Cargo.toml  README.md  context.md
.github/workflows/: release.yml
assets/: musico.desktop
musico_app/: Cargo.toml  check_err.txt
musico_app/src/: app.rs  config.rs  icons.rs  lyrics.rs  main.rs  mpris.rs  scanner.rs  state.rs  theme.rs  timer.rs  updater.rs
musico_app/src/components/: art_canvas.rs  mini_player.rs  mod.rs  seek_bar.rs  sidebar.rs  song_row.rs
musico_app/src/views/: library.rs  mod.rs  now_playing.rs  playlists.rs  queue.rs  settings.rs  stats.rs
musico_playback/: Cargo.toml  scratch.rs
musico_playback/examples/: play_file.rs
musico_playback/src/: crossfade.rs  decoder.rs  eq.rs  error.rs  events.rs  lib.rs  output.rs  queue.rs  resampler.rs  state.rs
musico_recommender/: Cargo.toml
musico_recommender/src/: errors.rs  extractor.rs  history.rs  lib.rs  models.rs  playlists.rs  recommender.rs  session.rs  stats.rs  vector_store.rs
