[package]
name = "musico_app"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["wgpu", "image", "canvas", "tokio", "svg"] }
musico_playback = { path = "../musico_playback" }
musico_recommender = { path = "../musico_recommender" }
walkdir = "2"
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
tokio = { version = "1", features = ["full"] }
palette = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rfd = "0.14"
log = "0.4"
rand = "0.8"
env_logger = "0.11"
